Avoid overflow

--- a/src/style.css
+++ b/src/style.css
@@ -82,6 +82,7 @@ body {
   font-size: var(--fontSize-1);
   color: var(--color-text);
   background: var(--color-background);
+  overflow-wrap: break-word;
 }
 
 footer {
